@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.20 2004-11-18 01:10:59 karl Exp $
+# $Id: Makefile.am,v 1.21 2005-01-25 16:45:43 karl Exp $
 # Makefile.am for texinfo/doc.
 # Run automake in .. to produce Makefile.in from this.
 #
@@ -48,8 +48,8 @@ install-data-local:
 endif
 
 texmf_texinfo = $(TEXMF)/tex/texinfo
-texmf_dvips = $(TEXMF)/tex/generic/dvips
-texmf_pdftex_misc = $(TEXMF)/pdftex/plain/misc
+texmf_dvips = $(TEXMF)/tex/generic/epsf
+texmf_pdftex_misc = $(TEXMF)/pdftex/plain/pdfcolor
 install-tex:
 	test -n "$(TEXMF)" || (echo "TEXMF must be set." >&2; exit 1)
 	$(mkinstalldirs) $(DESTDIR)$(texmf_texinfo) $(DESTDIR)$(texmf_dvips) $(DESTDIR)$(texmf_pdftex_misc)
